# computational-geometry-playground

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  conanfile.txt  conanfile_linux.txt  conanfile_windows.txt  vcpkg.json
.github/workflows/: cmake.yaml  cmake.yml  conan_build.yml  conan_build_debug.yml  conan_build_release.yml  pre-commit.yaml  vcpkg_build.yml  vcpkg_build_debug.yml  vcpkg_build_release.yml
cmake/: build_external_project.cmake
examples/: CMakeLists.txt  convex_hull.cpp  example_eigen.cpp  example_opencv.cpp  example_sciplot.cpp  line_segment_intersection.cpp
src/: CMakeLists.txt  main.cpp
src/algorithm/solver/: convex_hull_solver.cpp  convex_hull_solver.hpp  line_segment_intersection_solver.cpp  line_segment_intersection_solver.hpp  solver_base.cpp  solver_base.hpp  solver_type.hpp
src/common/: geometry_factory.cpp  geometry_factory.hpp
src/common/geometry/: all_geometries.hpp  geometry_base.cpp  geometry_base.hpp  geometry_type.hpp  lines2d.cpp  lines2d.hpp  lines_2d.cpp  lines_2d.hpp  points.cpp  points.hpp  points2d.cpp  points2d.hpp
src/logging/: logging.hpp
src/utils/: include_eigen.hpp  include_sciplot.hpp
src/visualization/color/: colors.cpp  colors.hpp
src/visualization/drawable/: drawable_base.hpp  drawable_type.hpp  line_string.cpp  line_string.hpp  point_set.cpp  point_set.hpp
src/visualization/visualizer/: opencv_visualizer.cpp  opencv_visualizer.hpp  sciplot_visualizer.cpp  sciplot_visualizer.hpp  sfml_visualizer.cpp  sfml_visualizer.hpp  visualizer_base.cpp  visualizer_base.hpp
test/: CMakeLists.txt  test_eigen.cpp  test_implot.cpp  test_opencv.cpp  test_sciplot.cpp  test_sfml.cpp
